# gemstone

./: .clang-format  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  ci-build.sh  prog.gem  program.gem  run-check-test.sh  run-clang-format.sh  run-docker-build.sh  run-lib-build.sh
.github/workflows/: build-check-sdk.yaml  msys2-cross-compile.yml
dep/lldcl/: CMakeLists.txt  lldcl.cpp
docs/: mangling.md
examples/: lib_common.c  lib_common.txt  lib_fibonacci.c  lib_fibonacci.txt
lib/: CMakeLists.txt  bool.gem  build.toml  def.gem  spec.md  std.gem  string.gem  vec.gem
lib/def/: def.h  mod.gem
lib/io/: api.h  impl.c  io.c  io.h
lib/mem/: impl.c
lib/src/: bool.gsc  build.toml  capi.h  def.gem  io.gem  io.gsc  math.gsc  mem.gem  mem.gsc  os.gem  os.gsc  std.gem  std.gsc
lib/src/archive/: gsc-libc.gv  gsc-libc.s
lib/src/def/: api.h
lib/src/entry/: entrypoint.c
lib/src/glibc/: bootstrap.gsc  os.gsc  types.gsc
lib/src/io/: api.h  impl.c
lib/src/libc/: bootstrap.gsc  io.gsc  mem.gsc  os.gsc  std.gsc  types.gsc
lib/src/math/: api.h  impl.c
lib/src/mem/: api.h  impl.c
lib/src/os/: api.h  impl.c
sdk/: Dockerfile
src/: compiler.c  compiler.h  main.c
src/ast/: ast.c  ast.h
src/cfg/: opt.c  opt.h
src/codegen/: backend.c  backend.h
src/gc/: gc.c  gc.h
src/io/: files.c  files.h
src/lex/: lexer.l  util.c  util.h
src/link/: driver.h  lib.c  lib.h
src/link/clang/: driver.c  driver.h
src/link/gcc/: driver.c  driver.h
src/link/lldc/: lldc.c  lldc.h
src/llvm/: backend.c  backend.h  expr.c  expr.h  func.c  func.h  parser.c  parser.h  stmt.c  stmt.h  type.c  types.c  types.h  variables.c  variables.h
src/llvm/decl/: variable.c  variable.h
src/llvm/expr/: build.c  build.h
src/llvm/function/: function-types.h  function.c  function.h
src/llvm/link/: lld.c  lld.h
src/llvm/llvm-ir/: expr.c  expr.h  func.c  func.h  stmt.c  stmt.h  types.c  types.h  variables.c  variables.h
src/llvm/stmt/: build.c  build.h
src/llvm/types/: composite-types.h  composite.c  composite.h  scope.c  scope.h  structs.h  type.c  type.h
src/mem/: cache.c  cache.h
src/set/: set.c  set.h  types.c  types.h
src/sys/: col.c  col.h  log.c  log.h
src/yacc/: parser.y
tests/: CMakeLists.txt
tests/ast/: CMakeLists.txt  build_tree.c  gen_graph.c  print_graphviz.c  print_node.c  test_ast.py
tests/box/: build.toml  main.gsc
tests/box/archive/: prime.gv  prime.s
tests/cache/: CMakeLists.txt  cache_test.c
tests/driver/: CMakeLists.txt
tests/driver/clang/: build.toml  main.gsc  test_driver_clang.py
tests/driver/gcc/: build.toml  main.gsc  test_driver_gcc.py
tests/glib/: CMakeLists.txt  glib_hashmap.c
tests/hello_world/: CMakeLists.txt  build.toml  main.gsc  test_hello_world.py
tests/input_file/: CMakeLists.txt  test.gem  test.gsc  test_input_file.py
tests/klib/: CMakeLists.txt  hashmap.c
tests/llvm/: CMakeLists.txt  global_vars.c
tests/llvm/params/: CMakeLists.txt  params.c  test.txt
tests/llvm/typedef/: CMakeLists.txt  test.txt  typedef.c
tests/logging/: CMakeLists.txt  check_output.py  level.c  output.c  panic.c  streams.c  test_logging.py
tests/project/: CMakeLists.txt  build.toml  test_project.py
tests/project/src/: main.txt
tests/stdlib/: build.toml
tests/stdlib/src/: echo.gsc  letters.gsc  matrix.gsc
